tolk-tester/tests/invalid-typing/err-6511.tolk
enum Color { Red, Green, Blue }

fun main(c: Color) {
    c == 1
}

/**
@compilation_should_fail
@stderr can not apply operator `==` to `Color` and `int`
 */
